--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -2,3 +2,6 @@ $primary: #da4917;
 $dark: #222;
 $navbar-height: 7em;
 $navbar-item-img-max-height: 5em;
+$navbar-item-hover-background-color: $primary;
+$navbar-dropdown-item-hover-background-color: $primary;
+$navbar-dropdown-item-hover-color: white;
