Newsletter integration & more layout

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -5,3 +5,4 @@ $navbar-item-img-max-height: 5em;
 $navbar-item-hover-background-color: $primary;
 $navbar-dropdown-item-hover-background-color: $primary;
 $navbar-dropdown-item-hover-color: white;
+$link: $primary;
