--- a/public/css/app.css
+++ b/public/css/app.css
@@ -161,7 +161,7 @@ body {
 }
 
 a {
-  color: #3273dc;
+  color: #da4917;
   cursor: pointer;
   text-decoration: none;
 }
@@ -770,12 +770,12 @@ a.has-text-primary:focus {
 }
 
 .has-text-link {
-  color: #3273dc !important;
+  color: #da4917 !important;
 }
 
 a.has-text-link:hover,
 a.has-text-link:focus {
-  color: #205bbc !important;
+  color: #ac3a12 !important;
 }
 
 .has-text-info {
@@ -1353,13 +1353,13 @@ a.has-text-danger:focus {
 
 a.box:hover,
 a.box:focus {
-  -webkit-box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px #3273dc;
-          box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px #3273dc;
+  -webkit-box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px #da4917;
+          box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px #da4917;
 }
 
 a.box:active {
-  -webkit-box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px #3273dc;
-          box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px #3273dc;
+  -webkit-box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px #da4917;
+          box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px #da4917;
 }
 
 .button {
@@ -1457,8 +1457,8 @@ a.box:active {
 
 .button:focus:not(:active),
 .button.is-focused:not(:active) {
-  -webkit-box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
-          box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
+  -webkit-box-shadow: 0 0 0 0.125em rgba(218, 73, 23, 0.25);
+          box-shadow: 0 0 0 0.125em rgba(218, 73, 23, 0.25);
 }
 
 .button:active,
@@ -2021,14 +2021,14 @@ a.box:active {
 }
 
 .button.is-link {
-  background-color: #3273dc;
+  background-color: #da4917;
   border-color: transparent;
   color: #fff;
 }
 
 .button.is-link:hover,
 .button.is-link.is-hovered {
-  background-color: #276cda;
+  background-color: #ce4516;
   border-color: transparent;
   color: #fff;
 }
@@ -2041,19 +2041,19 @@ a.box:active {
 
 .button.is-link:focus:not(:active),
 .button.is-link.is-focused:not(:active) {
-  -webkit-box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
-          box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
+  -webkit-box-shadow: 0 0 0 0.125em rgba(218, 73, 23, 0.25);
+          box-shadow: 0 0 0 0.125em rgba(218, 73, 23, 0.25);
 }
 
 .button.is-link:active,
 .button.is-link.is-active {
-  background-color: #2366d1;
+  background-color: #c34115;
   border-color: transparent;
   color: #fff;
 }
 
 .button.is-link[disabled] {
-  background-color: #3273dc;
+  background-color: #da4917;
   border-color: transparent;
   -webkit-box-shadow: none;
           box-shadow: none;
@@ -2061,7 +2061,7 @@ a.box:active {
 
 .button.is-link.is-inverted {
   background-color: #fff;
-  color: #3273dc;
+  color: #da4917;
 }
 
 .button.is-link.is-inverted:hover {
@@ -2073,7 +2073,7 @@ a.box:active {
   border-color: transparent;
   -webkit-box-shadow: none;
           box-shadow: none;
-  color: #3273dc;
+  color: #da4917;
 }
 
 .button.is-link.is-loading:after {
@@ -2082,27 +2082,27 @@ a.box:active {
 
 .button.is-link.is-outlined {
   background-color: transparent;
-  border-color: #3273dc;
-  color: #3273dc;
+  border-color: #da4917;
+  color: #da4917;
 }
 
 .button.is-link.is-outlined:hover,
 .button.is-link.is-outlined:focus {
-  background-color: #3273dc;
-  border-color: #3273dc;
+  background-color: #da4917;
+  border-color: #da4917;
   color: #fff;
 }
 
 .button.is-link.is-outlined.is-loading:after {
-  border-color: transparent transparent #3273dc #3273dc !important;
+  border-color: transparent transparent #da4917 #da4917 !important;
 }
 
 .button.is-link.is-outlined[disabled] {
   background-color: transparent;
-  border-color: #3273dc;
+  border-color: #da4917;
   -webkit-box-shadow: none;
           box-shadow: none;
-  color: #3273dc;
+  color: #da4917;
 }
 
 .button.is-link.is-inverted.is-outlined {
@@ -2114,7 +2114,7 @@ a.box:active {
 .button.is-link.is-inverted.is-outlined:hover,
 .button.is-link.is-inverted.is-outlined:focus {
   background-color: #fff;
-  color: #3273dc;
+  color: #da4917;
 }
 
 .button.is-link.is-inverted.is-outlined[disabled] {
@@ -3009,9 +3009,9 @@ a.box:active {
 .textarea.is-focused,
 .textarea:active,
 .textarea.is-active {
-  border-color: #3273dc;
-  -webkit-box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
-          box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
+  border-color: #da4917;
+  -webkit-box-shadow: 0 0 0 0.125em rgba(218, 73, 23, 0.25);
+          box-shadow: 0 0 0 0.125em rgba(218, 73, 23, 0.25);
 }
 
 .input[disabled],
@@ -3136,7 +3136,7 @@ a.box:active {
 
 .input.is-link,
 .textarea.is-link {
-  border-color: #3273dc;
+  border-color: #da4917;
 }
 
 .input.is-link:focus,
@@ -3147,8 +3147,8 @@ a.box:active {
 .textarea.is-link.is-focused,
 .textarea.is-link:active,
 .textarea.is-link.is-active {
-  -webkit-box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
-          box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
+  -webkit-box-shadow: 0 0 0 0.125em rgba(218, 73, 23, 0.25);
+          box-shadow: 0 0 0 0.125em rgba(218, 73, 23, 0.25);
 }
 
 .input.is-info,
@@ -3323,7 +3323,7 @@ a.box:active {
 }
 
 .select:not(.is-multiple)::after {
-  border: 1px solid #3273dc;
+  border: 1px solid #da4917;
   border-right: 0;
   border-top: 0;
   content: " ";
@@ -3418,9 +3418,9 @@ a.box:active {
 .select select.is-focused,
 .select select:active,
 .select select.is-active {
-  border-color: #3273dc;
-  -webkit-box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
-          box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
+  border-color: #da4917;
+  -webkit-box-shadow: 0 0 0 0.125em rgba(218, 73, 23, 0.25);
+          box-shadow: 0 0 0 0.125em rgba(218, 73, 23, 0.25);
 }
 
 .select select[disabled] {
@@ -3533,15 +3533,15 @@ a.box:active {
 }
 
 .select.is-link select {
-  border-color: #3273dc;
+  border-color: #da4917;
 }
 
 .select.is-link select:focus,
 .select.is-link select.is-focused,
 .select.is-link select:active,
 .select.is-link select.is-active {
-  -webkit-box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
-          box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25);
+  -webkit-box-shadow: 0 0 0 0.125em rgba(218, 73, 23, 0.25);
+          box-shadow: 0 0 0 0.125em rgba(218, 73, 23, 0.25);
 }
 
 .select.is-info select {
@@ -3808,14 +3808,14 @@ a.box:active {
 }
 
 .file.is-link .file-cta {
-  background-color: #3273dc;
+  background-color: #da4917;
   border-color: transparent;
   color: #fff;
 }
 
 .file.is-link:hover .file-cta,
 .file.is-link.is-hovered .file-cta {
-  background-color: #276cda;
+  background-color: #ce4516;
   border-color: transparent;
   color: #fff;
 }
@@ -3823,14 +3823,14 @@ a.box:active {
 .file.is-link:focus .file-cta,
 .file.is-link.is-focused .file-cta {
   border-color: transparent;
-  -webkit-box-shadow: 0 0 0.5em rgba(50, 115, 220, 0.25);
-          box-shadow: 0 0 0.5em rgba(50, 115, 220, 0.25);
+  -webkit-box-shadow: 0 0 0.5em rgba(218, 73, 23, 0.25);
+          box-shadow: 0 0 0.5em rgba(218, 73, 23, 0.25);
   color: #fff;
 }
 
 .file.is-link:active .file-cta,
 .file.is-link.is-active .file-cta {
-  background-color: #2366d1;
+  background-color: #c34115;
   border-color: transparent;
   color: #fff;
 }
@@ -4247,7 +4247,7 @@ a.box:active {
 }
 
 .help.is-link {
-  color: #3273dc;
+  color: #da4917;
 }
 
 .help.is-info {
@@ -4831,7 +4831,7 @@ a.box:active {
 }
 
 .notification.is-link {
-  background-color: #3273dc;
+  background-color: #da4917;
   color: #fff;
 }
 
@@ -4949,15 +4949,15 @@ a.box:active {
 }
 
 .progress.is-link::-webkit-progress-value {
-  background-color: #3273dc;
+  background-color: #da4917;
 }
 
 .progress.is-link::-moz-progress-bar {
-  background-color: #3273dc;
+  background-color: #da4917;
 }
 
 .progress.is-link::-ms-fill {
-  background-color: #3273dc;
+  background-color: #da4917;
 }
 
 .progress.is-info::-webkit-progress-value {
@@ -5071,8 +5071,8 @@ a.box:active {
 
 .table td.is-link,
 .table th.is-link {
-  background-color: #3273dc;
-  border-color: #3273dc;
+  background-color: #da4917;
+  border-color: #da4917;
   color: #fff;
 }
 
@@ -5313,7 +5313,7 @@ a.box:active {
 }
 
 .tag:not(body).is-link {
-  background-color: #3273dc;
+  background-color: #da4917;
   color: #fff;
 }
 
@@ -5711,7 +5711,7 @@ a.tag:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #3273dc;
+  color: #da4917;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -5983,7 +5983,7 @@ a.dropdown-item:hover {
 }
 
 a.dropdown-item.is-active {
-  background-color: #3273dc;
+  background-color: #da4917;
   color: #fff;
 }
 
@@ -6267,7 +6267,7 @@ a.dropdown-item.is-active {
 }
 
 .menu-list a.is-active {
-  background-color: #3273dc;
+  background-color: #da4917;
   color: #fff;
 }
 
@@ -6394,17 +6394,17 @@ a.dropdown-item.is-active {
 }
 
 .message.is-link {
-  background-color: #f6f9fe;
+  background-color: #fef8f6;
 }
 
 .message.is-link .message-header {
-  background-color: #3273dc;
+  background-color: #da4917;
   color: #fff;
 }
 
 .message.is-link .message-body {
-  border-color: #3273dc;
-  color: #22509a;
+  border-color: #da4917;
+  color: #893215;
 }
 
 .message.is-info {
@@ -7030,7 +7030,7 @@ a.dropdown-item.is-active {
 }
 
 .navbar.is-link {
-  background-color: #3273dc;
+  background-color: #da4917;
   color: #fff;
 }
 
@@ -7043,7 +7043,7 @@ a.dropdown-item.is-active {
 .navbar.is-link .navbar-brand > a.navbar-item.is-active,
 .navbar.is-link .navbar-brand .navbar-link:hover,
 .navbar.is-link .navbar-brand .navbar-link.is-active {
-  background-color: #2366d1;
+  background-color: #c34115;
   color: #fff;
 }
 
@@ -7067,7 +7067,7 @@ a.dropdown-item.is-active {
   .navbar.is-link .navbar-end > a.navbar-item.is-active,
   .navbar.is-link .navbar-end .navbar-link:hover,
   .navbar.is-link .navbar-end .navbar-link.is-active {
-    background-color: #2366d1;
+    background-color: #c34115;
     color: #fff;
   }
 
@@ -7078,12 +7078,12 @@ a.dropdown-item.is-active {
 
   .navbar.is-link .navbar-item.has-dropdown:hover .navbar-link,
   .navbar.is-link .navbar-item.has-dropdown.is-active .navbar-link {
-    background-color: #2366d1;
+    background-color: #c34115;
     color: #fff;
   }
 
   .navbar.is-link .navbar-dropdown a.navbar-item.is-active {
-    background-color: #3273dc;
+    background-color: #da4917;
     color: #fff;
   }
 }
@@ -7465,7 +7465,7 @@ a.navbar-item.is-active,
 a.navbar-link:hover,
 a.navbar-link.is-active {
   background-color: #da4917;
-  color: #3273dc;
+  color: #da4917;
 }
 
 .navbar-item {
@@ -7500,15 +7500,15 @@ a.navbar-link.is-active {
 
 .navbar-item.is-tab:hover {
   background-color: transparent;
-  border-bottom-color: #3273dc;
+  border-bottom-color: #da4917;
 }
 
 .navbar-item.is-tab.is-active {
   background-color: transparent;
-  border-bottom-color: #3273dc;
+  border-bottom-color: #da4917;
   border-bottom-style: solid;
   border-bottom-width: 3px;
-  color: #3273dc;
+  color: #da4917;
   padding-bottom: calc(0.5rem - 3px);
 }
 
@@ -7642,7 +7642,7 @@ a.navbar-link.is-active {
 
   .navbar.is-transparent .navbar-dropdown a.navbar-item.is-active {
     background-color: whitesmoke;
-    color: #3273dc;
+    color: #da4917;
   }
 
   .navbar-burger {
@@ -7694,7 +7694,7 @@ a.navbar-link.is-active {
   }
 
   .navbar-link::after {
-    border: 1px solid #3273dc;
+    border: 1px solid #da4917;
     border-right: 0;
     border-top: 0;
     content: " ";
@@ -7766,7 +7766,7 @@ a.navbar-link.is-active {
 
   .navbar-dropdown a.navbar-item.is-active {
     background-color: whitesmoke;
-    color: #3273dc;
+    color: #da4917;
   }
 
   .navbar-dropdown.is-boxed {
@@ -8010,8 +8010,8 @@ a.navbar-link.is-active {
 }
 
 .pagination-link.is-current {
-  background-color: #3273dc;
-  border-color: #3273dc;
+  background-color: #da4917;
+  border-color: #da4917;
   color: #fff;
 }
 
@@ -8186,7 +8186,7 @@ a.navbar-link.is-active {
 }
 
 .panel-list a:hover {
-  color: #3273dc;
+  color: #da4917;
 }
 
 .panel-block {
@@ -8222,12 +8222,12 @@ a.navbar-link.is-active {
 }
 
 .panel-block.is-active {
-  border-left-color: #3273dc;
+  border-left-color: #da4917;
   color: #363636;
 }
 
 .panel-block.is-active .panel-icon {
-  color: #3273dc;
+  color: #da4917;
 }
 
 a.panel-block,
@@ -8312,8 +8312,8 @@ label.panel-block:hover {
 }
 
 .tabs li.is-active a {
-  border-bottom-color: #3273dc;
-  color: #3273dc;
+  border-bottom-color: #da4917;
+  color: #da4917;
 }
 
 .tabs ul {
@@ -8429,8 +8429,8 @@ label.panel-block:hover {
 }
 
 .tabs.is-toggle li.is-active a {
-  background-color: #3273dc;
-  border-color: #3273dc;
+  background-color: #da4917;
+  border-color: #da4917;
   color: #fff;
   z-index: 1;
 }
@@ -10945,7 +10945,7 @@ label.panel-block:hover {
 }
 
 .hero.is-link {
-  background-color: #3273dc;
+  background-color: #da4917;
   color: #fff;
 }
 
@@ -10969,7 +10969,7 @@ label.panel-block:hover {
 
 @media screen and (max-width: 1023px) {
   .hero.is-link .navbar-menu {
-    background-color: #3273dc;
+    background-color: #da4917;
   }
 }
 
@@ -10982,7 +10982,7 @@ label.panel-block:hover {
 .hero.is-link a.navbar-item.is-active,
 .hero.is-link .navbar-link:hover,
 .hero.is-link .navbar-link.is-active {
-  background-color: #2366d1;
+  background-color: #c34115;
   color: #fff;
 }
 
@@ -11015,16 +11015,16 @@ label.panel-block:hover {
 .hero.is-link .tabs.is-toggle li.is-active a:hover {
   background-color: #fff;
   border-color: #fff;
-  color: #3273dc;
+  color: #da4917;
 }
 
 .hero.is-link.is-bold {
-  background-image: linear-gradient(141deg, #1577c6 0%, #3273dc 71%, #4366e5 100%);
+  background-image: linear-gradient(141deg, #b51809 0%, #da4917 71%, #ee751d 100%);
 }
 
 @media screen and (max-width: 768px) {
   .hero.is-link.is-bold .navbar-menu {
-    background-image: linear-gradient(141deg, #1577c6 0%, #3273dc 71%, #4366e5 100%);
+    background-image: linear-gradient(141deg, #b51809 0%, #da4917 71%, #ee751d 100%);
   }
 }
 
@@ -11523,7 +11523,7 @@ h3 {
   background: #333333;
   background: -webkit-gradient(linear, left top, right top, from(#333333), to(#111111));
   background: linear-gradient(to right, #333333 0%, #111111 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#333333', endColorstr='#111111',GradientType=1 );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#111111', GradientType=1);
 }
 
 .navbar.is-dark .navbar-brand > a.navbar-item:hover,
@@ -11537,18 +11537,23 @@ h3 {
   color: #da4917;
 }
 
-.hero.is-primary.is-bold {
+.hero.is-primary.is-bold,
+div.notification.is-primary {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#fa872a+0,ba0c04+100 */
   background: #fa872a;
   background: linear-gradient(135deg, #fa872a 0%, #ba0c04 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fa872a', endColorstr='#ba0c04',GradientType=1 );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fa872a', endColorstr='#ba0c04', GradientType=1);
 }
 
 .hero.is-dark.is-bold {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#333333+0,111111+100 */
   background: #333333;
   background: linear-gradient(135deg, #333333 0%, #111111 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#333333', endColorstr='#111111',GradientType=1 );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#111111', GradientType=1);
+}
+
+.hero.is-dark.is-bold .hero-body .title {
+  color: #da4917;
 }
 
 .button {
