More work, work, work, work, work

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Changa+One|Source+Sans+Pro:400,700);/*! bulma.io v0.6.2 | MIT License | github.com/jgthms/bulma */
+@import url(https://fonts.googleapis.com/css?family=Changa+One|Source+Sans+Pro:400,700|Barlow+Condensed);/*! bulma.io v0.6.2 | MIT License | github.com/jgthms/bulma */
 
 @-webkit-keyframes spinAround {
   from {
@@ -11558,5 +11558,28 @@ div.notification.is-primary {
 
 .button {
   border-radius: 5px;
+}
+
+.is-combinus {
+  background: #e1e1d5 url("/img/noisebg.png");
+}
+
+.is-combinus .combinus-body {
+  font-size: 20px;
+  color: #222;
+  text-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+}
+
+.is-combinus .combinus-body h2 {
+  font-family: "Barlow Condensed", "Source Sans Pro", sans-serif;
+  font-size: 32px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.is-combinus img.combinus-screen {
+  border: 2px solid #222;
+  -webkit-box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
 }
 
