--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -204,6 +204,14 @@ section.menu-fader {
   }
 }
 
+div.scroll-shim {
+  background-color: #222;
+  width: 8px;
+  height: 101vh;
+  position: fixed;
+  right: -8px;
+}
+
 @media (max-width: 768px) {
   nav.sidebar {
     left: -300px;
