--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -6,3 +6,4 @@ $navbar-item-hover-background-color: $primary;
 $navbar-dropdown-item-hover-background-color: $primary;
 $navbar-dropdown-item-hover-color: white;
 $link: $primary;
+$pagination-focus-border-color: $primary;
