--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11550,6 +11550,35 @@ div.content h3 {
   color: #da4917;
 }
 
+div.loading {
+  position: fixed;
+  background-color: #222222;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  -webkit-transition: opacity .25s;
+  transition: opacity .25s;
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+
 nav.sidebar {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#333333+0,111111+100 */
   background: #333333;
@@ -11660,17 +11689,22 @@ div.notification {
   font-size: 1rem;
 }
 
+section.related {
+  background-color: whitesmoke;
+}
+
 section.related div.columns {
   max-width: 1000px;
   margin: auto;
 }
 
 section.related h3.title {
-  color: white;
+  color: #da4917;
 }
 
 section.related h4.related-title {
   color: #222;
+  font-weight: 400;
 }
 
 section.related div.card {
