--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Changa+One|Source+Sans+Pro:400,700|Source+Serif+Pro:400,700');
 // Variables
 @import "variables";
-// Bootstrap
+// Bulma
 @import "~bulma/bulma";
 
 body {
@@ -41,6 +41,27 @@ div.content {
     font-weight: 400 !important;
     color: $primary;
   }
+}
+
+div.loading {
+  position: fixed;
+  background-color: #222222;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .25s;
+}
+
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */
+{
+  opacity: 0;
 }
 
 nav.sidebar {
@@ -143,16 +164,19 @@ div.notification {
 }
 
 section.related {
+  background-color: $light;
+
   div.columns {
     max-width: 1000px;
     margin: auto;
   }
   h3.title {
-    color: white;
+    color: $primary;
   }
 
   h4.related-title {
     color: #222;
+    font-weight: 400;
   }
 
   div.card {
@@ -160,7 +184,7 @@ section.related {
     transition: all 0.2s ease-in-out;
 
     &:hover {
-      box-shadow: 0 6px 10px rgba(10,10,10,0.1);
+      box-shadow: 0 6px 10px rgba(10, 10, 10, 0.1);
     }
 
     div.card-image img {
@@ -232,7 +256,7 @@ section.menu-fader {
   z-index: 1;
   width: 101vh;
   height: 101vh;
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0, 0, 0, 0.8);
   pointer-events: none;
   opacity: 0;
   transition: opacity 0.2s ease-in-out;
