--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -232,16 +232,17 @@ div.blog-body {
 
 button.menu-toggle {
   position: fixed;
+  top: 0;
   z-index: 2;
   width: 100%;
   text-align: right;
   margin: 0;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#fa872a+0,ba0c04+100 */
-  background: #fa872a;
-  background: -moz-linear-gradient(-45deg, #fa872a 0%, #ba0c04 100%);
-  background: -webkit-linear-gradient(-45deg, #fa872a 0%, #ba0c04 100%);
-  background: linear-gradient(135deg, #fa872a 0%, #ba0c04 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fa872a', endColorstr='#ba0c04', GradientType=1);
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#333333+0,111111+100 */
+  background: #333333;
+  background: -moz-linear-gradient(-45deg, #333333 0%, #111111 100%);
+  background: -webkit-linear-gradient(-45deg, #333333 0%, #111111 100%);
+  background: linear-gradient(135deg, #333333 0%, #111111 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#111111', GradientType=1);
   color: white;
   outline: 0;
   border: 0;
@@ -286,6 +287,10 @@ section.blog-header-image {
 }
 
 @media (max-width: 768px) {
+  section.main {
+    padding-top: 48px;
+  }
+
   nav.sidebar {
     left: -300px;
     transition: all 0.2s ease-in-out;
