CSS tweaks and centered related blog cards

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -284,6 +284,7 @@ section.blog-header-image {
   height: 250px;
   background-color: #222;
   background-repeat: no-repeat;
+  background-position-y: 50%;
 }
 
 @media (max-width: 768px) {
